--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "devextreme-reactive",
+  "version": "0.1.0",
   "author": {
     "name": "Developer Express Inc.",
     "url": "https://www.devexpress.com/"
